--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="historia,antecedentes,futsal,mujeres">
     <meta name="description" content="Presentación del equipo con la incorporación de imagenes, video y texto.">
     <!--Favicon-->
-    <link rel="shortcut icon" href="img/LaFavoritafavicon.ico" type="image/x-icon">
+    <link rel= "icon" href="../img/escudo.ico">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/footer.css">
@@ -33,6 +33,7 @@
             <a class="menu" href="https://www.fefusamendoza.com.ar/" target="_blank">FEFUSA</a>
         </nav>
     </header>
+    <!-- Todo esto quiero cambiarlo por botones para hacerlo responsive -->
 
     <!--Contenido-->
     <main>
@@ -45,9 +46,7 @@
             </div>
 
             <!--Bloque 2-->
-            <div>
-                <img class="frase" src="img/frase.png" alt="Frase motivadora">
-            </div>
+            <!-- La frase motivadora no encontre una ideal -->
         </section>
 
         <!--Sección 2-->
@@ -95,7 +94,7 @@
                 </ul>
             </div>
 
-            <p class="atencion">Se encuentrá en formación la categoría F20 (2003-2004-2005) para presentarse en el Torneo Apertura 2024<br><strong><i>¡Te estamos esperando!</i></strong></p>
+            <p class="atencion">Se encuentrá en formación la categoría F20 (2003-2004-2005) para presentarse en el Torneo Clausura 2024<br><strong><i>¡Te estamos esperando!</i></strong></p>
         </section>
     </main>
 
@@ -103,11 +102,11 @@
     <footer>
         <div class="columna-1">
             <img src="img/berzuini.png" alt="Logo personal" style="width: 10vw;">
-            <h5>© 2023 Todos los derechos reservados.</h5>
+            <h5>© 2024 Grupo 16 Todos los derechos reservados.</h5>
             <h5>Curso Full Stack Python</h5>
         </div>
         <div class="columna-2">
-            <a class="hipervinculo"  href="https://instagram.com/futsal_femenino_capital?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="img/instagram.png" alt="Instagram" style="width: 2vw;">@FUTSAL_FEMENINO_CAPITAL</a>
+            <a class="hipervinculo"  href="https://instagram.com/futsal_femenino_capital?igshid=OGQ5ZDc2ODk2ZA==" target="_blank"><img src="../Codo-a-codo-Fullstack-24172/img/Instagram-frame-png.png" alt="Instagram" style="width: 2vw;">@FUTSAL_FEMENINO_CAPITAL</a>
         </div>
 
         <div>
@@ -115,7 +114,7 @@
         </div>
 
          <div>
-             <a class="hipervinculo"  href="https://www.youtube.com/@g5-lafavorita232" target="_blank"><img src="img/youtube.png" alt="YouTube" style="width: 2vw;">G5 - LA FAVORITA</a>
+             <a class="hipervinculo"  href="https://www.youtube.com/@g5-lafavorita232" target="_blank"><img src="../Codo-a-codo-Fullstack-24172/img/youtube.jpg" alt="YouTube" style="width: 2vw;">G5 - LA FAVORITA</a>
         </div>  
     
    </footer>
